--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "url": "https://github.com/tabei/mocha_ci_test/issues"
   },
   "devDependencies": {
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "mocha-junit-reporter": "^1.12.0"
   },
   "homepage": "https://github.com/tabei/mocha_ci_test#readme"
 }
